--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/src/assets/logo_normal.png" />
+    <link rel="icon" href="/src/assets/logo_bintangcompress.png" />
     <link href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Karate STMKG</title>
